--- a/documentation/index.html
+++ b/documentation/index.html
@@ -135,7 +135,7 @@
                                                 Do you have a team and you want to collaborate with them? You can invite or add them manually from the <a href="#team_members">Team members</a> view. Once you&#39;ve added the team members then you can add
                                                 the members in your projects, assign them to tasks, send <a href="#messaging">messages</a>, <a href="#timeline">share</a> ideas and files, store their personal, social and work information, etc.</li>
                                             <li>
-                                                Do you want to track <a href="#time_cards">attendance</a> or daily time reporting of your team members? This application makes easy to do time reporting. The team members can report the daily time by using
+                                                Do you want to track <a href="#time_cards">attendancenew</a> or daily time reporting of your team members? This application makes easy to do time reporting. The team members can report the daily time by using
                                                 the <strong>Clock In </strong>and <strong>Clock Out</strong> button located in dashboard. They can also submit the <a href="#leave">leave</a> applications for their absences.</li>
                                             <li>
                                                 You can create invoices and send the invoices to your <a href="#clients">clients</a> from the <a href="#invoices_payments">Invoices</a> view. Make sure you have configured your&nbsp;<a href="#settings">email settings</a>&nbsp;
@@ -247,7 +247,7 @@
                                             <li>Integrate your calendar with google calendar and stay synced.</li>
                                             <li>Notification is very important to know the different events/activities. You can control all the notifications and can set who’ll get that. Get push notification, email notification and also in slack.</li>
                                             <li>Add knowledge base articles for your customers to share more information.</li>
-                                            <li>Manage your team attendance report using timecards. See daily working history and punch in out status.</li>
+                                            <li>Manage your team attendancenew report using timecards. See daily working history and punch in out status.</li>
                                             <li>Team members can submit leave application for their absence. Approve or reject the applications.</li>
                                             <li>Make a road-map for your projects and see visual report in the Gantt chart.</li>
                                             <li>Define custom role/permissions for different team members and define who can access which modules.</li>
@@ -674,7 +674,7 @@
                                             <li>
                                                 The<strong> Job info</strong> tab represents the job title, salary and the other job related information.</li>
                                             <li>
-                                                To see the details list of the member&#39;s attendance, check the <strong>Time cards</strong> tab.</li>
+                                                To see the details list of the member&#39;s attendancenew, check the <strong>Time cards</strong> tab.</li>
                                             <li>
                                                 From the <strong>Leave </strong>tab, you can see the details leave history for the team member.&nbsp;</li>
                                         </ol>
@@ -740,7 +740,7 @@
                                     </div>
                                     <div class="p20">
                                         <p>
-                                            The time cards section represents the attendance or total time log of each team members. Any team member can start clock from the dashboard by clicking on <strong>Clock In</strong> button. Once he/she clicks
+                                            The time cards section represents the attendancenew or total time log of each team members. Any team member can start clock from the dashboard by clicking on <strong>Clock In</strong> button. Once he/she clicks
                                             on the <strong>Clock In</strong> button the timer count starts. After clicking on the <strong>Clock Out</strong> button the timer stop counting the time for the team members.&nbsp;</p>
                                         <p>
                                             <img alt="timecard" src="assets/images/clockin-out.jpg"></p>
