--- a/documentation/index.html
+++ b/documentation/index.html
@@ -135,7 +135,7 @@
                                                 Do you have a team and you want to collaborate with them? You can invite or add them manually from the <a href="#team_members">Team members</a> view. Once you&#39;ve added the team members then you can add
                                                 the members in your projects, assign them to tasks, send <a href="#messaging">messages</a>, <a href="#timeline">share</a> ideas and files, store their personal, social and work information, etc.</li>
                                             <li>
-                                                Do you want to track <a href="#time_cards">attendancenew</a> or daily time reporting of your team members? This application makes easy to do time reporting. The team members can report the daily time by using
+                                                Do you want to track <a href="#time_cards">attendance</a> or daily time reporting of your team members? This application makes easy to do time reporting. The team members can report the daily time by using
                                                 the <strong>Clock In </strong>and <strong>Clock Out</strong> button located in dashboard. They can also submit the <a href="#leave">leave</a> applications for their absences.</li>
                                             <li>
                                                 You can create invoices and send the invoices to your <a href="#clients">clients</a> from the <a href="#invoices_payments">Invoices</a> view. Make sure you have configured your&nbsp;<a href="#settings">email settings</a>&nbsp;
@@ -235,7 +235,8 @@
                                             <li>Automatically create support tickets from emails and be more professional on customer support.</li>
                                             <li>List your services/products in online store and get orders from the customers.</li>
                                             <li>Customize dashboard for the client portal and set important widgets based on your business. Add different custom widgets for special information. Custom widgets supports iframe to show information from external
-                                                websites.</li>
+                                                websites.
+                                            </li>
                                             <li>Change theme color to adjust with your brand. The dark and light mode theme also available.</li>
                                             <li>Add announcements for your team members and customers to share instant notice, advertisements or offers.</li>
                                             <li>Add files in projects, give feedback/comments on the files and get notification.</li>
@@ -247,7 +248,7 @@
                                             <li>Integrate your calendar with google calendar and stay synced.</li>
                                             <li>Notification is very important to know the different events/activities. You can control all the notifications and can set who’ll get that. Get push notification, email notification and also in slack.</li>
                                             <li>Add knowledge base articles for your customers to share more information.</li>
-                                            <li>Manage your team attendancenew report using timecards. See daily working history and punch in out status.</li>
+                                            <li>Manage your team attendance report using timecards. See daily working history and punch in out status.</li>
                                             <li>Team members can submit leave application for their absence. Approve or reject the applications.</li>
                                             <li>Make a road-map for your projects and see visual report in the Gantt chart.</li>
                                             <li>Define custom role/permissions for different team members and define who can access which modules.</li>
@@ -674,7 +675,7 @@
                                             <li>
                                                 The<strong> Job info</strong> tab represents the job title, salary and the other job related information.</li>
                                             <li>
-                                                To see the details list of the member&#39;s attendancenew, check the <strong>Time cards</strong> tab.</li>
+                                                To see the details list of the member&#39;s attendance, check the <strong>Time cards</strong> tab.</li>
                                             <li>
                                                 From the <strong>Leave </strong>tab, you can see the details leave history for the team member.&nbsp;</li>
                                         </ol>
@@ -740,7 +741,7 @@
                                     </div>
                                     <div class="p20">
                                         <p>
-                                            The time cards section represents the attendancenew or total time log of each team members. Any team member can start clock from the dashboard by clicking on <strong>Clock In</strong> button. Once he/she clicks
+                                            The time cards section represents the attendance or total time log of each team members. Any team member can start clock from the dashboard by clicking on <strong>Clock In</strong> button. Once he/she clicks
                                             on the <strong>Clock In</strong> button the timer count starts. After clicking on the <strong>Clock Out</strong> button the timer stop counting the time for the team members.&nbsp;</p>
                                         <p>
                                             <img alt="timecard" src="assets/images/clockin-out.jpg"></p>
@@ -767,7 +768,8 @@
                                             <li>Apply a new leave using the <strong>Apply leave</strong> button.</li>
                                             <li>Admins or allowed members can assign leave for team members using the <strong>Assign leave</strong> button.</li>
                                             <li>To see the details information of the leave, click on this icon. From there, allowed members can approve/reject the leave. Please note that, once it'll be approved/rejected this operation can't be undone or
-                                                change.</li>
+                                                change.
+                                            </li>
                                             <li>
                                                 All applications tab contains all of the leave applications.</li>
                                             <li>
@@ -787,7 +789,8 @@
                                             This application provides&nbsp;the announcement publishing feature. The admins and selected team members can create new announcement for team members and/or clients.&nbsp;</p>
                                         <p>
                                             The published announcement will be appeared&nbsp;in dashboard of each user. Once the user clicks on the announcement then it will not be appear&nbsp;in dashboard again. But the users can see the announcement from the <strong>Announcements </strong>menu
-                                            anytime.</p>
+                                            anytime.
+                                        </p>
                                     </div>
                                 </div>
                             </section>
